global using GrpcReason = Dariosoft.EmailSender.EndPoint.Abstraction.GrpcInterface.GrpcDariosoft_EmailSender_EndPoint_Abstraction_Models_Reason;
global using GrpcResult = Dariosoft.EmailSender.EndPoint.Abstraction.GrpcInterface.GrpcDariosoft_EmailSender_EndPoint_Abstraction_Models_Result;
global using GrpcResult_BaseModel = Dariosoft.EmailSender.EndPoint.Abstraction.GrpcInterface.GrpcDariosoft_EmailSender_EndPoint_Abstraction_Models_Result_Dariosoft_EmailSender_EndPoint_Abstraction_Models_Common_BaseModel_;

global using GrpcModel_BaseModel = Dariosoft.EmailSender.EndPoint.Abstraction.GrpcInterface.GrpcDariosoft_EmailSender_EndPoint_Abstraction_Models_Common_BaseModel;
global using GrpcModel_ListQuery = Dariosoft.EmailSender.EndPoint.Abstraction.GrpcInterface.GrpcDariosoft_EmailSender_EndPoint_Abstraction_Models_Common_ListQueryModel;
global using GrpcModel_SetAvailibility = Dariosoft.EmailSender.EndPoint.Abstraction.GrpcInterface.GrpcDariosoft_EmailSender_EndPoint_Abstraction_Models_Common_SetAvailabilityModel;

global using GrpcModel_Client = Dariosoft.EmailSender.EndPoint.Abstraction.GrpcInterface.GrpcDariosoft_EmailSender_EndPoint_Abstraction_Models_Client_ClientModel;
global using GrpcModel_CreateClient = Dariosoft.EmailSender.EndPoint.Abstraction.GrpcInterface.GrpcDariosoft_EmailSender_EndPoint_Abstraction_Models_Client_CreateClientModel;
global using GrpcModel_UpdateClient = Dariosoft.EmailSender.EndPoint.Abstraction.GrpcInterface.GrpcDariosoft_EmailSender_EndPoint_Abstraction_Models_Client_UpdateClientModel;
global using GrpcResult_ClientModel = Dariosoft.EmailSender.EndPoint.Abstraction.GrpcInterface.GrpcDariosoft_EmailSender_EndPoint_Abstraction_Models_Result_Dariosoft_EmailSender_EndPoint_Abstraction_Models_Client_ClientModel_;
global using GrpcListResult_ClientModel = Dariosoft.EmailSender.EndPoint.Abstraction.GrpcInterface.GrpcDariosoft_EmailSender_EndPoint_Abstraction_Models_ListResult_Dariosoft_EmailSender_EndPoint_Abstraction_Models_Client_ClientModel_;


global using GrpcModel_Host = Dariosoft.EmailSender.EndPoint.Abstraction.GrpcInterface.GrpcDariosoft_EmailSender_EndPoint_Abstraction_Models_Host_HostModel;
global using GrpcModel_CreateHost = Dariosoft.EmailSender.EndPoint.Abstraction.GrpcInterface.GrpcDariosoft_EmailSender_EndPoint_Abstraction_Models_Host_CreateHostModel;
global using GrpcModel_UpdateHost = Dariosoft.EmailSender.EndPoint.Abstraction.GrpcInterface.GrpcDariosoft_EmailSender_EndPoint_Abstraction_Models_Host_UpdateHostModel;
global using GrpcResult_HostModel = Dariosoft.EmailSender.EndPoint.Abstraction.GrpcInterface.GrpcDariosoft_EmailSender_EndPoint_Abstraction_Models_Result_Dariosoft_EmailSender_EndPoint_Abstraction_Models_Host_HostModel_;
global using GrpcListResult_HostModel = Dariosoft.EmailSender.EndPoint.Abstraction.GrpcInterface.GrpcDariosoft_EmailSender_EndPoint_Abstraction_Models_ListResult_Dariosoft_EmailSender_EndPoint_Abstraction_Models_Host_HostModel_;

global using GrpcModel_Account = Dariosoft.EmailSender.EndPoint.Abstraction.GrpcInterface.GrpcDariosoft_EmailSender_EndPoint_Abstraction_Models_Account_AccountModel;
global using GrpcModel_CreateAccount = Dariosoft.EmailSender.EndPoint.Abstraction.GrpcInterface.GrpcDariosoft_EmailSender_EndPoint_Abstraction_Models_Account_CreateAccountModel;
global using GrpcModel_UpdateAccount = Dariosoft.EmailSender.EndPoint.Abstraction.GrpcInterface.GrpcDariosoft_EmailSender_EndPoint_Abstraction_Models_Account_UpdateAccountModel;
global using GrpcResult_AccountModel = Dariosoft.EmailSender.EndPoint.Abstraction.GrpcInterface.GrpcDariosoft_EmailSender_EndPoint_Abstraction_Models_Result_Dariosoft_EmailSender_EndPoint_Abstraction_Models_Account_AccountModel_;
global using GrpcListResult_AccountModel = Dariosoft.EmailSender.EndPoint.Abstraction.GrpcInterface.GrpcDariosoft_EmailSender_EndPoint_Abstraction_Models_ListResult_Dariosoft_EmailSender_EndPoint_Abstraction_Models_Account_AccountModel_;

global using GrpcModel_MailAddress = Dariosoft.EmailSender.EndPoint.Abstraction.GrpcInterface.GrpcDariosoft_EmailSender_EndPoint_Abstraction_Models_Common_MailAddress;

global using GrpcModel_Message = Dariosoft.EmailSender.EndPoint.Abstraction.GrpcInterface.GrpcDariosoft_EmailSender_EndPoint_Abstraction_Models_Message_MessageModel;
global using GrpcModel_CreateMessage = Dariosoft.EmailSender.EndPoint.Abstraction.GrpcInterface.GrpcDariosoft_EmailSender_EndPoint_Abstraction_Models_Message_CreateMessageModel;
global using GrpcModel_UpdateMessage = Dariosoft.EmailSender.EndPoint.Abstraction.GrpcInterface.GrpcDariosoft_EmailSender_EndPoint_Abstraction_Models_Message_UpdateMessageModel;
global using GrpcResult_MessageModel = Dariosoft.EmailSender.EndPoint.Abstraction.GrpcInterface.GrpcDariosoft_EmailSender_EndPoint_Abstraction_Models_Result_Dariosoft_EmailSender_EndPoint_Abstraction_Models_Message_MessageModel_;
global using GrpcListResult_MessageModel = Dariosoft.EmailSender.EndPoint.Abstraction.GrpcInterface.GrpcDariosoft_EmailSender_EndPoint_Abstraction_Models_ListResult_Dariosoft_EmailSender_EndPoint_Abstraction_Models_Message_MessageModel_;